--- a/source/_sass/_introduction.scss
+++ b/source/_sass/_introduction.scss
@@ -4,7 +4,15 @@
   }
 
   #download-container {
-    .button { color: $main-color; }
+    background-color: transparent;
+    position: relative;
+    bottom: 18vh;
+    @media (max-width: 600px) {
+      bottom: 12vh;
+    }
+    @media (min-width: 1100px) {
+      bottom: 22vh;
+    }
   }
 
 }
