--- a/source/_sass/_custom_styles.scss
+++ b/source/_sass/_custom_styles.scss
@@ -6,3 +6,40 @@
 #services {
   
 }
+
+// NAV MENU SCROLL
+.main-menu {
+  overflow-x: auto;
+  &::-webkit-scrollbar {
+      width: 8px;
+  }
+  &::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px inherit; 
+      -webkit-border-radius: 14px;
+      border-radius: 10px;
+  }
+  &::-webkit-scrollbar-thumb {
+      -webkit-border-radius: 10px;
+      border-radius: 14px;
+      background: inherit; 
+      -webkit-box-shadow: inset 0 0 6px $gray; 
+  }
+  &::-webkit-scrollbar-thumb:window-inactive {
+    background: $gray; 
+  }
+}
+
+
+// #overlay {
+//     overflow-y: scroll;
+// }
+// #overlay {
+//     position: fixed;
+//     top: 0;
+//     bottom: 0;
+//     left: 0;
+//     right: 0;
+//     z-index: 10;
+//     display: none;
+//     opacity: .7;
+// }
